--- a/test/stability-tests/pom.xml
+++ b/test/stability-tests/pom.xml
@@ -61,6 +61,12 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
+            <artifactId>apache5-client</artifactId>
+            <version>${awsjavasdk.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
             <artifactId>netty-nio-client</artifactId>
             <version>${awsjavasdk.version}</version>
             <scope>test</scope>
