--- a/buildspecs/s3-regression-tests.yml
+++ b/buildspecs/s3-regression-tests.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   build:
     commands:
-      - mvn clean install -P s3-regression-tests -pl :s3-tests -am -T1C $MAVEN_OPTIONS
+      - mvn clean install -P s3-regression-tests -pl :s3-tests -am -T1C Dregression.test=$REGRESSION_TEST $MAVEN_OPTIONS
       - echo $MAVEN_OPTIONS
     finally:
       - mkdir -p codebuild-test-reports
