add timeout. Add sync http client with higher conn pool manually and close s3 client

--- a/test/s3-tests/pom.xml
+++ b/test/s3-tests/pom.xml
@@ -176,6 +176,12 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>apache-client</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
