Add all streaming operation to s3 checksums tests (#5998)
* add test configs for all streaming type

* buildspec fix

* buildspec fix

* check if tests hand without multipart

* add http-auth-aws-crt for crt sigv4a tests

* fix request body methods with 'remaining'

* test 2MiB instead of 200MiB

* fix for 'remaining' test type

* fix for fromString, reduce logs

* fix for string content length

* fix for string content length

* test 200MiB large size

* use 80MiB for large files

* Fix for TM_JAVA

* Fix for TM_JAVA

* Fix for TM_JAVA

* need more memory

* more fix for TM

* some more dl stuff

* logs

* fix multi

* fix multi bucket

* fix multi bucket

* part index starts at 1

* complete multipart fix

* complete multipart fix

* complete multipart fix

* complete multipart fix

* fix for parts

* adding logs

* more logs, no crc

* improved message for failed assertion

* fix crc check for multi and cleanup

* fix memory issues

* add s3 checksum validation

* avoid using AwsChunkedV4aPayloadSigner

* avoid using AwsChunkedV4aPayloadSigner

* DownloadConfig toString

* fix Unmanaged

* fix for crc32

* rename tp regression testing
seperate data-place, upload and download test
avoid running useless tests cases

* fix logs

* added README, verify crc32 of uploaded object with an additional get object, precalculated crc32 when possible, rename S3ClientFlavor fields,

* fix npe

* junit parallel execution

* multipart with no-length

* fix pom

* remove bucket accelerate config

* remove bucket accelerate config

* remove accelerate config from ControlPlaneOperationRegressionTesting
remove bundle from dependencies to reduce build time

* bring back bundle

* bring back bundle-sdk

* s3 as test

* fix Junit failure to discover tests, due to class not found

* remove bundle

* fix concurrent bucket creation logs. Fix log4j2 logging.

* Add s3-regressions to GitHub ci

* use info level debuf logs

* remove ci

* Lower large file and split codebuilds to reduce build 

--- a/.github/workflows/codebuild-ci.yml
+++ b/.github/workflows/codebuild-ci.yml
@@ -167,3 +167,106 @@ jobs:
         uses: aws-actions/aws-codebuild-run-build@v1
         with:
           project-name: aws-sdk-java-v2-migration-test
+
+  s3-regression-tests-download:
+    if: github.repository == 'aws/aws-sdk-java-v2'
+    runs-on: ubuntu-latest
+    env:
+      REGRESSION_TEST: DownloadStreamingRegressionTesting
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
+          aws-region: us-west-2
+          role-duration-seconds: 7200
+      - name: Run s3 regression tests for downloads
+        uses: aws-actions/aws-codebuild-run-build@v1
+        with:
+          project-name: aws-sdk-java-v2-s3-regression-tests
+          env-vars-for-codebuild: REGRESSION_TEST
+  s3-regression-tests-control-plane:
+    if: github.repository == 'aws/aws-sdk-java-v2'
+    runs-on: ubuntu-latest
+    env:
+      REGRESSION_TEST: ControlPlaneOperationRegressionTesting
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
+          aws-region: us-west-2
+          role-duration-seconds: 7200
+      - name: Run s3 regression tests for control plane
+        uses: aws-actions/aws-codebuild-run-build@v1
+        with:
+          project-name: aws-sdk-java-v2-s3-regression-tests
+          env-vars-for-codebuild: REGRESSION_TEST
+  s3-regression-tests-upload-sync:
+    if: github.repository == 'aws/aws-sdk-java-v2'
+    runs-on: ubuntu-latest
+    env:
+      REGRESSION_TEST: UploadSyncRegressionTesting
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
+          aws-region: us-west-2
+          role-duration-seconds: 7200
+      - name: Run s3 regression tests for uploads
+        uses: aws-actions/aws-codebuild-run-build@v1
+        with:
+          project-name: aws-sdk-java-v2-s3-regression-tests
+          env-vars-for-codebuild: REGRESSION_TEST
+  s3-regression-tests-upload-async:
+    if: github.repository == 'aws/aws-sdk-java-v2'
+    runs-on: ubuntu-latest
+    env:
+      REGRESSION_TEST: UploadAsyncRegressionTesting
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
+          aws-region: us-west-2
+          role-duration-seconds: 7200
+      - name: Run s3 regression tests for uploads
+        uses: aws-actions/aws-codebuild-run-build@v1
+        with:
+          project-name: aws-sdk-java-v2-s3-regression-tests
+          env-vars-for-codebuild: REGRESSION_TEST
+  s3-regression-tests-upload-crt:
+    if: github.repository == 'aws/aws-sdk-java-v2'
+    runs-on: ubuntu-latest
+    env:
+      REGRESSION_TEST: UploadCrtRegressionTesting
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
+          aws-region: us-west-2
+          role-duration-seconds: 7200
+      - name: Run s3 regression tests for uploads
+        uses: aws-actions/aws-codebuild-run-build@v1
+        with:
+          project-name: aws-sdk-java-v2-s3-regression-tests
+          env-vars-for-codebuild: REGRESSION_TEST
+  s3-regression-tests-upload-multi:
+    if: github.repository == 'aws/aws-sdk-java-v2'
+    runs-on: ubuntu-latest
+    env:
+      REGRESSION_TEST: UploadTransferManagerRegressionTesting
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
+          aws-region: us-west-2
+          role-duration-seconds: 7200
+      - name: Run s3 regression tests for uploads
+        uses: aws-actions/aws-codebuild-run-build@v1
+        with:
+          project-name: aws-sdk-java-v2-s3-regression-tests
+          env-vars-for-codebuild: REGRESSION_TEST
