--- a/bundle-sdk/pom.xml
+++ b/bundle-sdk/pom.xml
@@ -108,7 +108,7 @@
                 </exclusion>
                 <exclusion>
                     <groupId>io.netty</groupId>
-                    <artifactId>netty-codec</artifactId>
+                    <artifactId>netty-codec-base</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>io.netty</groupId>
