--- a/bom-internal/pom.xml
+++ b/bom-internal/pom.xml
@@ -116,7 +116,7 @@
             </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
-                <artifactId>netty-codec</artifactId>
+                <artifactId>netty-codec-base</artifactId>
                 <version>${netty.version}</version>
             </dependency>
             <dependency>
