--- a/bom-internal/pom.xml
+++ b/bom-internal/pom.xml
@@ -23,7 +23,7 @@
         <version>3.5.6</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <name>AWS Java SDK :: Bill of Materials Internal</name>
     <artifactId>bom-internal</artifactId>
 
     <dependencyManagement>
