--- a/test/architecture-tests/pom.xml
+++ b/test/architecture-tests/pom.xml
@@ -154,7 +154,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>apache5-client</artifactId>
-            <version>${awsjavasdk.version}</version>
+            <version>${awsjavasdk.version}-PREVIEW</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
