Added a single test for localaddress

--- a/test/stability-tests/pom.xml
+++ b/test/stability-tests/pom.xml
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>apache5-client</artifactId>
-            <version>${awsjavasdk.version}</version>
+            <version>${awsjavasdk.version}-PREVIEW</version>
             <scope>test</scope>
         </dependency>
         <dependency>
