--- a/core/aws-core/pom.xml
+++ b/core/aws-core/pom.xml
@@ -194,7 +194,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>apache5-client</artifactId>
-            <version>${awsjavasdk.version}</version>
+            <version>${awsjavasdk.version}-PREVIEW</version>
             <scope>test</scope>
         </dependency>
         <dependency>
