--- a/test/protocol-tests/pom.xml
+++ b/test/protocol-tests/pom.xml
@@ -96,7 +96,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>apache5-client</artifactId>
-            <version>${awsjavasdk.version}</version>
+            <version>${awsjavasdk.version}-PREVIEW</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
