Add merge_group to some of the GH workflows so that they get triggered when a pull request is put into merge queue

--- a/.github/workflows/api-surface-area-review-verification.yml
+++ b/.github/workflows/api-surface-area-review-verification.yml
@@ -5,6 +5,7 @@ permissions:
   pull-requests: read
 
 on:
+  merge_group:
   pull_request:
     types: [ opened, synchronize, reopened, labeled, unlabeled ]
     branches:
