--- a/.github/workflows/changelog-verification.yml
+++ b/.github/workflows/changelog-verification.yml
@@ -5,6 +5,7 @@ permissions:
   pull-requests: read
 
 on:
+  merge_group:
   pull_request:
     types: [ opened, synchronize, reopened, labeled, unlabeled ]
     branches:
