--- a/.github/workflows/codebuild-ci.yml
+++ b/.github/workflows/codebuild-ci.yml
@@ -193,108 +193,150 @@ jobs:
 
   s3-regression-tests-download:
     needs: check-s3-related-changes
-    if: github.repository == 'aws/aws-sdk-java-v2' && needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
+    if: github.repository == 'aws/aws-sdk-java-v2'
     runs-on: ubuntu-latest
     env:
       REGRESSION_TEST: DownloadStreamingRegressionTesting
     steps:
+      - name: Skip test - no S3 related changes
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes != 'true'
+        run: |
+          echo "No S3 related changes detected. Skipping S3 regression tests for downloads."
+          exit 0
       - name: Configure AWS Credentials
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
           aws-region: us-west-2
           role-duration-seconds: 7200
       - name: Run s3 regression tests for downloads
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
         uses: aws-actions/aws-codebuild-run-build@v1
         with:
           project-name: aws-sdk-java-v2-s3-regression-tests
           env-vars-for-codebuild: REGRESSION_TEST
   s3-regression-tests-control-plane:
     needs: check-s3-related-changes
-    if: github.repository == 'aws/aws-sdk-java-v2' && needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
+    if: github.repository == 'aws/aws-sdk-java-v2'
     runs-on: ubuntu-latest
     env:
       REGRESSION_TEST: ControlPlaneOperationRegressionTesting
     steps:
+      - name: Skip test - no S3 related changes
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes != 'true'
+        run: |
+          echo "No S3 related changes detected. Skipping S3 regression tests for control plane."
+          exit 0
       - name: Configure AWS Credentials
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
           aws-region: us-west-2
           role-duration-seconds: 7200
       - name: Run s3 regression tests for control plane
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
         uses: aws-actions/aws-codebuild-run-build@v1
         with:
           project-name: aws-sdk-java-v2-s3-regression-tests
           env-vars-for-codebuild: REGRESSION_TEST
   s3-regression-tests-upload-sync:
     needs: check-s3-related-changes
-    if: github.repository == 'aws/aws-sdk-java-v2' && needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
+    if: github.repository == 'aws/aws-sdk-java-v2'
     runs-on: ubuntu-latest
     env:
       REGRESSION_TEST: UploadSyncRegressionTesting
     steps:
+      - name: Skip test - no S3 related changes
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes != 'true'
+        run: |
+          echo "No S3 related changes detected. Skipping S3 regression tests for upload sync."
+          exit 0
       - name: Configure AWS Credentials
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
           aws-region: us-west-2
           role-duration-seconds: 7200
       - name: Run s3 regression tests for uploads
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
         uses: aws-actions/aws-codebuild-run-build@v1
         with:
           project-name: aws-sdk-java-v2-s3-regression-tests
           env-vars-for-codebuild: REGRESSION_TEST
   s3-regression-tests-upload-async:
     needs: check-s3-related-changes
-    if: github.repository == 'aws/aws-sdk-java-v2' && needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
+    if: github.repository == 'aws/aws-sdk-java-v2'
     runs-on: ubuntu-latest
     env:
       REGRESSION_TEST: UploadAsyncRegressionTesting
     steps:
+      - name: Skip test - no S3 related changes
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes != 'true'
+        run: |
+          echo "No S3 related changes detected. Skipping S3 regression tests for upload async."
+          exit 0
       - name: Configure AWS Credentials
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
           aws-region: us-west-2
           role-duration-seconds: 7200
       - name: Run s3 regression tests for uploads
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
         uses: aws-actions/aws-codebuild-run-build@v1
         with:
           project-name: aws-sdk-java-v2-s3-regression-tests
           env-vars-for-codebuild: REGRESSION_TEST
   s3-regression-tests-upload-crt:
     needs: check-s3-related-changes
-    if: github.repository == 'aws/aws-sdk-java-v2' && needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
+    if: github.repository == 'aws/aws-sdk-java-v2'
     runs-on: ubuntu-latest
     env:
       REGRESSION_TEST: UploadCrtRegressionTesting
     steps:
+      - name: Skip test - no S3 related changes
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes != 'true'
+        run: |
+          echo "No S3 related changes detected. Skipping S3 regression tests for upload CRT."
+          exit 0
       - name: Configure AWS Credentials
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
           aws-region: us-west-2
           role-duration-seconds: 7200
       - name: Run s3 regression tests for uploads
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
         uses: aws-actions/aws-codebuild-run-build@v1
         with:
           project-name: aws-sdk-java-v2-s3-regression-tests
           env-vars-for-codebuild: REGRESSION_TEST
   s3-regression-tests-upload-multi:
     needs: check-s3-related-changes
-    if: github.repository == 'aws/aws-sdk-java-v2' && needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
+    if: github.repository == 'aws/aws-sdk-java-v2'
     runs-on: ubuntu-latest
     env:
       REGRESSION_TEST: UploadTransferManagerRegressionTesting
     steps:
+      - name: Skip test - no S3 related changes
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes != 'true'
+        run: |
+          echo "No S3 related changes detected. Skipping S3 regression tests for upload transfer manager."
+          exit 0
       - name: Configure AWS Credentials
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.CI_AWS_ROLE_ARN }}
           aws-region: us-west-2
           role-duration-seconds: 7200
       - name: Run s3 regression tests for uploads
+        if: needs.check-s3-related-changes.outputs.has_s3_related_changes == 'true'
         uses: aws-actions/aws-codebuild-run-build@v1
         with:
           project-name: aws-sdk-java-v2-s3-regression-tests
