move s3 regression tests to a new workflow. Skip in CodeBuild when no s3 related changes are detected, instead of in the Github workflow jobs

--- a/buildspecs/s3-regression-tests.yml
+++ b/buildspecs/s3-regression-tests.yml
@@ -3,8 +3,13 @@ version: 0.2
 phases:
   build:
     commands:
-      - mvn clean install -P s3-regression-tests -pl :s3-tests -am -T1C -Dregression.test=$REGRESSION_TEST $MAVEN_OPTIONS
-      - echo $MAVEN_OPTIONS
+      - |
+        if [ "$HAS_S3_CHANGES" = "false" ]; then
+          echo "No s3 related changes in the PR, skipping s3 regression tests"
+          exit 0
+        fi
+        mvn clean install -P s3-regression-tests -pl :s3-tests -am -T1C -Dregression.test="$REGRESSION_TEST" $MAVEN_OPTIONS
+        echo $MAVEN_OPTIONS
     finally:
       - mkdir -p codebuild-test-reports
       - find ./ -name 'TEST-*.xml' -type f -exec cp {} codebuild-test-reports/ \;
