Handled comment for merge to master PR for apache 5.x

--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,8 @@
         <jre.version>1.8</jre.version>
         <httpcomponents.httpclient.version>4.5.13</httpcomponents.httpclient.version>
         <httpcomponents.httpcore.version>4.4.16</httpcomponents.httpcore.version>
-
+        <httpcomponents.client5.version>5.5</httpcomponents.client5.version>
+        <httpcomponents.core5.version>5.3.4</httpcomponents.core5.version>
         <!-- Reactive Streams version -->
         <reactive-streams.version>1.0.4</reactive-streams.version>
 
