All query tests passing!

--- a/test/protocol-tests/src/main/resources/codegen-resources/smithy-query/customization.config
+++ b/test/protocol-tests/src/main/resources/codegen-resources/smithy-query/customization.config
@@ -1,3 +1,4 @@
 {
-    "skipEndpointTestGeneration": true
+    "skipEndpointTestGeneration": true,
+    "enableGenerateCompiledEndpointRules": true
 }
