codegenerate PresignedUrlManager for sync s3 client

--- a/services/s3/src/main/resources/codegen-resources/customization.config
+++ b/services/s3/src/main/resources/codegen-resources/customization.config
@@ -358,5 +358,6 @@
       "methodName": "modifyUploadPartCopyRequest",
       "className": "software.amazon.awssdk.services.s3.internal.CustomRequestTransformerUtils"
     }
-  }
+  },
+   "presignedUrlManagerSupported": true
 }
