--- a/test/http-client-benchmarks/pom.xml
+++ b/test/http-client-benchmarks/pom.xml
@@ -26,33 +26,17 @@
     <artifactId>http-client-benchmarks</artifactId>
     <packaging>jar</packaging>
 
-    <name>AWS Java SDK :: Test :: SDK Benchmarks</name>
-    <description>Contains JMH benchmark code for the SDK</description>
+    <name>AWS Java SDK :: Test :: HTTP CLIENT Benchmarks</name>
+    <description>Contains JMH benchmark code for the SDK HTTP CLIENTS</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jmh.version>1.21</jmh.version>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <maven.compiler.release>21</maven.compiler.release>
-        <!--
-            JMH version to use with this project.
-          -->
         <jmh.version>1.37</jmh.version>
-
-        <!--
-            Java source/target to use for compilation.
-          -->
         <javac.target>21</javac.target>
-
-        <!--
-            Name of the benchmark Uber-JAR to generate.
-          -->
-        <uberjar.name>benchmarks</uberjar.name>
-
-        <sdk-v1.version>1.11.404</sdk-v1.version>
+        <uberjar.name>http-client-benchmarks</uberjar.name>
         <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
     </properties>
+
 
     <dependencies>
         <dependency>
@@ -80,20 +64,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-core</artifactId>
-            <version>${sdk-v1.version}</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>software.amazon.awssdk</groupId>
-            <artifactId>sdk-core</artifactId>
-            <version>${awsjavasdk.version}</version>
-        </dependency>
-
-
-        <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>apache-client</artifactId>
             <version>${awsjavasdk.version}</version>
@@ -119,45 +89,6 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty.http2</groupId>
-            <artifactId>http2-server</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-alpn-java-server</artifactId>
-        </dependency>
-         <dependency>
-             <groupId>org.eclipse.jetty.http2</groupId>
-             <artifactId>http2-hpack</artifactId>
-         </dependency>
-
-
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>software.amazon.awssdk</groupId>
-            <artifactId>cloudwatch</artifactId>
-            <version>${awsjavasdk.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>software.amazon.awssdk</groupId>
-            <artifactId>cloudwatch-metric-publisher</artifactId>
-            <version>${awsjavasdk.version}</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -166,13 +97,6 @@
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom-internal</artifactId>
                 <version>${awsjavasdk.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-bom</artifactId>
-                <version>${jetty.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -198,12 +122,6 @@
                         <release>${javac.target}</release>
                         <target>${javac.target}</target>
                     </configuration>
-                    <executions>
-                        <execution>
-                            <id>compile</id>
-                            <phase>none</phase>
-                        </execution>
-                    </executions>
                     <inherited>false</inherited>
                 </plugin>
                 <plugin>
@@ -274,8 +192,6 @@
                                         <Main-Class>org.openjdk.jmh.Main</Main-Class>
                                     </manifestEntries>
                                 </transformer>
-                                <!-- This is important to run h2 server -->
-                                <!-- https://github.com/jetty-project/embedded-jetty-live-war/blob/master/theserver/pom.xml -->
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
                             <filters>
