--- a/pom.xml
+++ b/pom.xml
@@ -824,7 +824,7 @@
                 <spotbugs.skip>true</spotbugs.skip>
                 <skip.unit.tests>true</skip.unit.tests>
                 <mdep.analyze.skip>true</mdep.analyze.skip>
-                <japicmp.skip>false</japicmp.skip>
+                <japicmp.skip>true</japicmp.skip>
                 <maven.javadoc.skip>true</maven.javadoc.skip>
             </properties>
         </profile>
