--- a/test/http-client-benchmarks/pom.xml
+++ b/test/http-client-benchmarks/pom.xml
@@ -32,7 +32,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jmh.version>1.37</jmh.version>
-        <javac.target>8</javac.target>
+        <javac.target>1.8</javac.target>
         <uberjar.name>http-client-benchmarks</uberjar.name>
         <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
     </properties>
@@ -114,14 +114,19 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.11.0</version>
+                    <version>3.1</version>
                     <!-- Override the configuration in the parent-->
                     <configuration combine.self="override">
                         <compilerVersion>${javac.target}</compilerVersion>
                         <source>${javac.target}</source>
-                        <release>${javac.target}</release>
                         <target>${javac.target}</target>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <id>compile</id>
+                            <phase>none</phase>
+                        </execution>
+                    </executions>
                     <inherited>false</inherited>
                 </plugin>
                 <plugin>
